--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -13,44 +13,56 @@
 <main class="container">
   <h1> Galaxy Australia Support </h1>
 
-  <div class="request-buttons">
-    <div class="col">
+  <div class="card-group" id="request-menu-cards">
+    <div class="card">
       <h1><span class="material-icons">help</span></h1>
-      <p class="text-large">
-        Need some assistance?
-        <br>
-        The Galaxy Australia team are here to help.
-      </p>
-      <br>
-      <a class="ga-btn" href="/request/support">
-        Request support
-      </a>
+      <div class="card-body">
+        <p>
+          Need some assistance?
+          <br>
+          The Galaxy Australia team are here to help.
+        </p>
+      </div>
+
+      <div class="card-footer">
+        <a class="ga-btn" href="/request/support">
+          Request support
+        </a>
+      </div>
     </div>
 
-    <div class="col">
+    <div class="card">
       <h1><span class="material-icons">construction</span></h1>
-      <p class="text-large">
-        Thousands of tools are waiting to be installed from the
-        <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>.
-        You can also request additions to Galaxy's reference datasets (e.g. genomes).
-      </p>
-      <br>
-      <a class="ga-btn" href="/request/tool">
-        Request tool/dataset
-      </a>
+      <div class="card-body">
+        <p>
+          Thousands of tools are waiting to be installed from the
+          <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>.
+          You can also request additions to Galaxy's reference datasets (e.g. genomes).
+        </p>
+      </div>
+
+      <div class="card-footer">
+        <a class="ga-btn" href="/request/tool">
+          Request tool/dataset
+        </a>
+      </div>
     </div>
 
-    <div class="col">
+      <div class="card">
       <h1><span class="material-icons">save</span></h1>
-      <p class="font-lg">
-        Need more data storage on Galaxy Australia?
-        <br>
-        Just ask!
-      </p>
-      <br>
-      <a class="ga-btn" href="/request/quota">
-        Request data quota
-      </a>
+      <div class="card-body">
+        <p>
+          Need more data storage on Galaxy Australia?
+          <br>
+          Just ask!
+        </p>
+      </div>
+
+      <div class="card-footer">
+        <a class="ga-btn" href="/request/quota">
+          Request data quota
+        </a>
+      </div>
     </div>
   </div>
 </main>
