Fix about menu bar responsive styling

--- a/webapp/home/static/home/css/about.css
+++ b/webapp/home/static/home/css/about.css
@@ -65,3 +65,29 @@ ol.nested ol > li {
 ol.nested ol ol > li {
   list-style-type: lower-roman;
 }
+
+/* Responsive */
+@media (max-width: 1200px) {
+  .about-nav {
+    padding: 1rem;
+  }
+  .about-nav button {
+    font-size: 0.85rem;
+    margin: .25rem;
+    padding: .25rem;
+    min-width: 125px;
+  }
+  .textbox {
+    margin: 2rem;
+  }
+}
+@media (max-width: 880px) {
+  .about-nav button {
+    margin: .25rem;
+    padding: .25rem;
+    min-width: 0px;
+  }
+  .textbox {
+    margin: 1rem;
+  }
+}
