--- a/webapp/home/templates/home/requests/support.html
+++ b/webapp/home/templates/home/requests/support.html
@@ -11,7 +11,15 @@
 {% block content %}
 <main class="container">
 
-  <h2 class="mb-10"> Galaxy Australia User Support </h2>
+  <div class="mb-10">
+    <h2> Galaxy Australia User Support </h2>
+    <small>
+      <a href="/request">
+        <span class="material-icons">arrow_back</span>
+        Back to support menu
+      </a>
+    </small>
+  </div>
 
   <p class="mb-10">
     Please leave us a message describing your query and we'll get back to you
