--- a/webapp/home/templates/home/requests/tool.html
+++ b/webapp/home/templates/home/requests/tool.html
@@ -12,9 +12,17 @@
 {% block content %}
 <main class="container"">
 
-  <h2>
-    Request for installation of software or dataset on Galaxy Australia
-  </h2>
+  <div class="mb-10">
+    <h2>
+      Request for installation of software or dataset on Galaxy Australia
+    </h2>
+    <small>
+      <a href="/request">
+        <span class="material-icons">arrow_back</span>
+        Back to support menu
+      </a>
+    </small>
+  </div>
 
   <div class="m-5 p-5">
     <p>
