--- a/webapp/home/templates/home/requests/quota.html
+++ b/webapp/home/templates/home/requests/quota.html
@@ -11,7 +11,16 @@
 
 {% block content %}
 <main class="container">
-  <h2>Galaxy Australia Quota Increase Application</h2>
+
+  <div class="mb-10">
+    <h2>Galaxy Australia Quota Increase Application</h2>
+    <small>
+      <a href="/request">
+        <span class="material-icons">arrow_back</span>
+        Back to support menu
+      </a>
+    </small>
+  </div>
 
   <div class="my-5 py-5">
     <p class="lead">
