Remove hard-coded iframe mode

--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -126,7 +126,7 @@
 
       $(document).ready( () => {
         // Switch to solid navbar if not embedded in iframe
-        // inIframe() || $('nav').removeClass("embedded");
+        inIframe() || $('nav').removeClass("embedded");
 
         // Enable bootstrap tooltips
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
