Increase footer top margin

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -71,7 +71,7 @@ nav.embedded .navbar-collapse {
 
 /* Footer */
 footer {
-  margin-top: 5rem;
+  margin-top: 10vw;
   padding-bottom: 1rem;
 }
 .logo img {
