--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<footer class="page-footer">
+<footer>
   <div class="container logo">
     <div class="text-center">
       <a href="https://www.biocommons.org.au" target="_blank">
