--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -21,7 +21,7 @@
   <p class="fst-italic">
     "This work is supported by Galaxy Australia, a service provided by the Australian Biocommons and its partners. The service receives NCRIS funding through Bioplatforms Australia and the Australian Research Data Commons
     <a href="https://doi.org/10.47486/PL105" target="_blank">(https://doi.org/10.47486/PL105)</a>,
-    as well as Queensland Government RICF funding."
+    as well as The University of Melbourne and Queensland Government RICF funding."
   </p>
 </div>
 
