About: update external links with target=_blank

--- a/webapp/home/templates/home/snippets/about/acceptable-use.html
+++ b/webapp/home/templates/home/snippets/about/acceptable-use.html
@@ -6,7 +6,7 @@
   </li>
   <li>
     You agree to interact with the Galaxy Australia Community (defined as other users of the service, technical support staff, operational staff, and those involved in governance of the service) in a responsible and respectful manner at all times, consistent with the
-    <a href="https://doi.org/10.5281/zenodo.4276854">Australian BioCommons Code of Conduct</a>.
+    <a href="https://doi.org/10.5281/zenodo.4276854" target="_blank">Australian BioCommons Code of Conduct</a>.
   </li>
   <li>
     The following uses of Galaxy Australia are explicitly forbidden:
