--- a/webapp/home/templates/home/snippets/about/data-privacy.html
+++ b/webapp/home/templates/home/snippets/about/data-privacy.html
@@ -107,7 +107,7 @@
     <ol>
       <li>
         If you choose to link Galaxy Australia with
-        <a href="https://cloudstor.aarnet.edu.au/">CloudStor</a>,
+        <a href="https://cloudstor.aarnet.edu.au/" target="_blank">CloudStor</a>,
         we retain the CloudStor username and App password you shared with us.
       </li>
       <li>
@@ -144,7 +144,7 @@
       </li>
       <li>
         Data collected as part of a support request is stored in our instance of Freshdesk - please refer to the
-        <a href="https://www.freshworks.com/privacy/">Freshworks Privacy Policy</a>
+        <a href="https://www.freshworks.com/privacy/" target="_blank">Freshworks Privacy Policy</a>
         for more information.
       </li>
     </ol>
@@ -174,11 +174,11 @@
     <ol>
       <li>
         Galaxy Australia uses Google Analytics to analyse usage and improve the service. Google Analytics uses cookies to generate data which is transmitted to Google. You can view Google’s Privacy Policy and options for controlling the data collected
-        <a href="www.google.com/policies/privacy/partners/">here</a>.
+        <a href="www.google.com/policies/privacy/partners/" target="_blank">here</a>.
       </li>
       <li>
         Galaxy Australia uses PostHog to analyse usage and improve the service. PostHog may use cookies to collect some of this information, but does not not track your usage to perform product analytics. You can view PostHog’s Privacy Policy and options for controlling the data collected
-        <a href="https://posthog.com/privacy">here</a>.
+        <a href="https://posthog.com/privacy" target="_blank">here</a>.
       </li>
     </ol>
   </li>
@@ -190,7 +190,7 @@
     <ol>
       <li>
         Galaxy Australia hosts and shares open community reference, open annotation data, tool metadata, and anonymised tool usage data with international Galaxy Servers as part of the
-        <a href="https://galaxyproject.org/usegalaxy/">usegalaxy.*</a>
+        <a href="https://galaxyproject.org/usegalaxy/" target="_blank">usegalaxy.*</a>
         initiative.
       </li>
       <li>
