--- a/webapp/home/templates/home/snippets/about/service-levels.html
+++ b/webapp/home/templates/home/snippets/about/service-levels.html
@@ -40,7 +40,7 @@
 
 <p>
   In case of closure of the service, registered account holders can download their hosted data and content via Galaxy’s existing
-  <a href="https://galaxy-au-training.github.io/tutorials/modules/galaxy-data/">export mechanisms</a>.
+  <a href="https://galaxy-au-training.github.io/tutorials/modules/galaxy-data/" target="_blank">export mechanisms</a>.
 </p>
 
 
@@ -58,7 +58,7 @@
 
 <p>
   Notification of planned service unavailability will be made via a notice on the Galaxy Australia website
-  <a href="https://usegalaxy.org.au/">https://usegalaxy.org.au/</a>
+  <a href="https://usegalaxy.org.au/" target="_blank">https://usegalaxy.org.au/</a>
   and via email to registered account holders. The period of notice varies depending on the length of the planned service unavailability:
 </p>
 
