--- a/webapp/home/templates/home/snippets/about/data-privacy.html
+++ b/webapp/home/templates/home/snippets/about/data-privacy.html
@@ -219,7 +219,12 @@
     </span>
     <ol>
       <li>
-        Registered account holders can see and modify the personal information collected by Galaxy Australia by logging into the service and navigating to “User” &#2192; “Preferences” &#2192; “Manage Information”.
+        Registered account holders can see and modify the personal information collected by Galaxy Australia by logging into the service and navigating to
+        <span class="action">User</span>
+        &gt;
+        <span class="action">Preferences</span>
+        &gt;
+        <span class="action">Manage Information</span>.
       </li>
       <li>
         Registered account holders can request removal of personal information at any time. Please
