--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -143,6 +143,7 @@
         if ( inIframe() ) {
           $('a').each( (i, a) => {
             if (a.href.includes('usegalaxy.org.au')) {
+              console.log(`Remove href from anchor: ${href}`);
               $(a).removeAttr("href");
             }
           });
