--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -143,7 +143,7 @@
         if ( inIframe() ) {
           $('a').each( (i, a) => {
             if (a.href.includes('usegalaxy.org.au')) {
-              console.log(`Remove href from anchor: ${href}`);
+              console.log(`Remove href from anchor: ${a.href}`);
               $(a).removeAttr("href");
             }
           });
