--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -143,7 +143,7 @@
         if ( inIframe() ) {
           const links = document.getElementsByTagName('a');
           for (var i in links) {
-            if (links[i].href.includes('//usegalaxy.org.au')) {
+            if (links[i].href && links[i].href.includes('//usegalaxy.org.au')) {
               console.log(`Remove href from anchor: ${links[i].href}`);
               $(links[i]).removeAttr("href");
             }
