Update quota request justification help text

--- a/webapp/home/templates/home/requests/quota.html
+++ b/webapp/home/templates/home/requests/quota.html
@@ -156,6 +156,7 @@
       </div>
       <div id="descriptionHelp" class="form-text">
         Please briefly justify your need for additional data storage.
+        Describe your data, file types and why they are required for your research.
       </div>
     </div>
 
