Update about operational partners to include Azure

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -43,8 +43,9 @@
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
   <a href="https://pawsey.org.au/" target="_blank">Pawsey Supercomputing Centre</a>,
+  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>
   and
-  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.
+  <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>.
 </p>
 
 <hr>
