--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -72,6 +72,7 @@
           Available now
         </p>
         <a class="ga-btn" href="https://training.galaxyproject.org/" target="_blank">
+          {% include 'home/snippets/icons/new-tab.html' %}
           Start learning
         </a>
       </div>
