Update cloudstor docs page

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -219,6 +219,7 @@ span.action {
   background-color: #eee;
   border: 1px solid #ccc;
   border-radius: .25rem;
+  white-space: nowrap;
 }
 
 /* Font */
