--- a/webapp/home/templates/home/pages/cloudstor.html
+++ b/webapp/home/templates/home/pages/cloudstor.html
@@ -38,17 +38,25 @@
       <b>To create an app password:</b>
       <br>
       <a href="https://cloudstor.aarnet.edu.au" target="_blank">Log into your CloudStor account</a>
-      and then click on "Settings" in the top right corner of the interface.
-      Once in Settings you will see a menu on the left, click "Security" and you
+      and then click on
+      <span class="action">Settings</span>
+      in the top right corner of the interface.
+      Once in Settings you will see a menu on the left, click
+      <span class="action">Security</span>
+      and you
       will see a section called app passwords.
       <br><br>
       App passwords simply require an "app name" this can be anything that helps
       you later identify the password in the future, for example "Galaxy". Fill
-      in an "app name" and click "Create new app password". You will then be
+      in an "app name" and click
+      <span class="action">Create new app password</span>.
+      You will then be
       presented with a username and password/token. Your username will most
       probably be your email address and the password/token with be a randomly
       generated token. Please write this token down somewhere or copy it to your
-      computer clipboard. When you click "Done" you will never be able to see
+      computer clipboard. When you click
+      <span class="action">Done</span>
+      you will never be able to see
       this password/token again.
       <br><br>
       Once the app password is created you will see it in the list of app
@@ -64,8 +72,13 @@
     <h3 class="mt-5">Letting Galaxy know your app password</h3>
 
     <p>
-      In Galaxy, go to your profile settings under the User menu -> Preferences ->
-      Manage Information, where you will need to set OwnCloud/CloudStor
+      In Galaxy, go to your profile settings under the
+      <span class="action">User menu</span>
+      &gt;
+      <span class="action">Preferences</span>
+      &gt;
+      <span class="action">Manage Information</span>,
+      where you will need to set OwnCloud/CloudStor
       Credentials.
     </p>
 
@@ -102,7 +115,11 @@
     <ol>
       <li>
         File or files to be imported into your Galaxy history from Cloudstor are
-        accessed from the "Upload Data / Choose Remote Files" tool:
+        accessed from the
+        <span class="action">Upload Data</span>
+        &gt;
+        <span class="action">Choose Remote Files</span>
+        tool:
         <br>
         <img src="{% static 'home/img/cloudstor-choose-remote-files.png' %}" alt="Choose remote files screenshot" style="width: 800px; max-width: 100%;">
       </li>
@@ -123,7 +140,9 @@
       </li>
 
       <li>
-        If your Cloudstor account is configured inside Galaxy the "Directory URI" option will show your Cloudstor folder:
+        If your Cloudstor account is configured inside Galaxy the
+        <span class="action">Directory URI</span>
+        option will show your Cloudstor folder:
         <br>
         <img src="{% static 'home/img/cloudstor-directory-option.png' %}" alt="CloudStor directory option screenshot">
       </li>
