--- a/webapp/home/templates/home/pages/cloudstor.html
+++ b/webapp/home/templates/home/pages/cloudstor.html
@@ -40,30 +40,27 @@
       <a href="https://cloudstor.aarnet.edu.au" target="_blank">Log into your CloudStor account</a>
       and then click on
       <span class="action">Settings</span>
-      in the top right corner of the interface.
-      Once in Settings you will see a menu on the left, click
+      in the top right corner of the interface. Once in Settings you will see a
+      menu on the left, click
       <span class="action">Security</span>
-      and you
-      will see a section called app passwords.
+      and you will see a section called app passwords.
       <br><br>
       App passwords simply require an "app name" this can be anything that helps
       you later identify the password in the future, for example "Galaxy". Fill
       in an "app name" and click
       <span class="action">Create new app password</span>.
-      You will then be
-      presented with a username and password/token. Your username will most
-      probably be your email address and the password/token with be a randomly
-      generated token. Please write this token down somewhere or copy it to your
-      computer clipboard. When you click
+      You will then be presented with a username and password/token. Your
+      username will be your email address and the password/token with be a
+      randomly generated token. Please write this token down somewhere or copy
+      it to your computer clipboard. When you click
       <span class="action">Done</span>
-      you will never be able to see
-      this password/token again.
+      you will never be able to see this password/token again.
       <br><br>
       Once the app password is created you will see it in the list of app
       passwords. You can also see when that password was last used. You also
       have the option to unlink your accounts by deleting the app password.
       <br><br>
-      <a href="https://support.aarnet.edu.au/hc/en-us/articles/236034707-How-do-I-manage-change-my-passwords-" target="_blank">
+      <a href="https://support.aarnet.edu.au/hc/en-us/articles/236034707-Set-or-change-your-password" target="_blank">
         Click here
       </a>
       for the most up to date instructions from AARNet.
