--- a/webapp/home/templates/home/requests/support.html
+++ b/webapp/home/templates/home/requests/support.html
@@ -9,7 +9,7 @@
 
 
 {% block content %}
-<main class="container">
+<main class="container mt-4">
 
   <div class="mb-10">
     <h2> Galaxy Australia User Support </h2>
