--- a/webapp/home/static/home/css/requests.css
+++ b/webapp/home/static/home/css/requests.css
@@ -11,11 +11,11 @@ hr {
 .mb-10 {
   margin-bottom: 5rem;
 }
-#request-menu-cards {
-  margin: 20vh 0 25vh 0;
+.request-menu-cards {
+  margin: 3rem 0;
   justify-content: center;
 }
-#request-menu-cards .card {
+.request-menu-cards .card {
   text-align: center;
   padding: 25px;
   border: none;
@@ -23,15 +23,15 @@ hr {
     1px solid var(--border);
   max-width: 30%;
 }
-#request-menu-cards .card-body,
-#request-menu-cards .card-footer {
+.request-menu-cards .card-body,
+.request-menu-cards .card-footer {
   border: none;
   background: none;
 }
-#request-menu-cards .card:last-child {
+.request-menu-cards .card:last-child {
   border: none;
 }
-#request-menu-cards
+.request-menu-cards
 span.material-icons {
   font-size: 4rem;
 }
@@ -48,10 +48,10 @@ span.material-icons {
   main.container {
     max-width: 95vw;
   }
-  #request-menu-cards .card {
+  .request-menu-cards .card {
     padding: .5rem;
   }
-  #request-menu-cards .card-body {
+  .request-menu-cards .card-body {
     font-size: 0.8rem;
   }
 }
@@ -59,7 +59,7 @@ span.material-icons {
   main.container {
     max-width: 95vw;
   }
-  #request-menu-cards .card-footer {
+  .request-menu-cards .card-footer {
     font-size: 0.8rem;
     padding: 0;
   }
