--- a/webapp/home/templates/home/requests/quota.html
+++ b/webapp/home/templates/home/requests/quota.html
@@ -10,7 +10,7 @@
 
 
 {% block content %}
-<main class="container">
+<main class="container mt-4">
 
   <div class="mb-10">
     <h2>Galaxy Australia Quota Increase Application</h2>
